# cMecro

./: .gitignore  24-02-06_003.txt  24-02-06_004.txt  24-02-06_005.txt  24-02-06_006.txt  24-02-06_009.txt  24-02-06_010.txt  24-02-06_012.txt  24-02-06_013.txt  24-02-06_014.txt  24-02-06_015.txt  24-02-06_016.txt  CMakeLists.txt  arduino.txt  cmake_cmd.txt  development_note.txt  main.cpp  mecro_data.db  개발일지.txt
SQL/: ALTER_TABLE.sql  CREATE_TABLE.sql  insert_key_codes_test.db  insert_test_data.sql  mecro_data.db  mecro_data_back_000.db  mecro_data_back_001.db  mecro_data_back_002.db  mecro_data_back_003.db  mecro_data_back_004.db  mecro_data_back_005.db  menus.csv  test1.txt  uncompress_from_sqlar.sql
components/: action_operator.cpp  action_operator.h  actions.h  commander.cpp  commander.h  img_processor.cpp  img_processor.h  key_data.cpp  key_data.h  key_patterns.cpp  key_patterns.h  keyboard_hooker.cpp  keyboard_hooker.h  mouse_hooker.cpp  mouse_hooker.h  sql_executive.cpp  sql_executive.h  timer.cpp  timer.h
components/view/: main_window.cpp  main_window.h
old_valt/: AC7_data_2023-02-24_001.db  AC7_data_project.sqbpro
old_valt/AC7_data_sqls/: alter.sql  data_modify.sql  delete.sql  full_schema.sql  insert.sql  select.sql  trigger.sql  update.sql  view.sql
old_valt/KillChain/: client.py  client.spec  client1.py  client1.spec  client2.py  client2.spec  client3.py  client3.spec  hook-pynput.py  server.py  server.spec
old_valt/KillChain/client_package/: client_modul.py
old_valt/KillChain/host_package/: server.py
old_valt/KillChain/host_package/test/: test000.py
old_valt/KillChain/icon/: icon킹작권.txt
old_valt/KillChain/test/: client1.py  client2.py  server.py  test000.py
old_valt/KillChain/배포/KillChain_ver1.0.0/: readme.txt
old_valt/MecroProject/Mecro/: arduino_original_code.txt  diablo000.py  mecro000.py  mecro002.py  mecro003.py  mecroClient.py  mecroServer.py  pixel_dict.dict
old_valt/MecroProject/Mecro/mecro_packge/: mecro004.py
old_valt/MecroProject/test/: Arduino_test013.txt  list.txt  test018_serverTest.py  test019_clientTest.py  test020_serverTest.py  test021_clientTest.py  test022_operator_server.py  test023_listener.py
old_valt/MecroProject/test/storage/: test000.py  test001.py  test002.py  test003.py  test004.py  test005.py  test006.py  test007.py  test008.py  test009.py  test010.py  test011.py  test012.py  test013.py  test014.py  test015.py  test016.py
old_valt/MecroProject/test/subtest/: pixel_dict.dict  test000.py  test001.py  test002.py  test003.py  user.pickle
test/: test000_capture.cpp  test000_capture.h  test001_keyboard.cpp  test001_keyboard.h  test002_key_pattern.cpp  test002_key_pattern.h  test003_arduino.cpp  test003_arduino.h  test004_sqlite3.cpp  test004_sqlite3.h  test006_wxWidgets.cpp  test006_wxWidgets.h  test_patterns.txt
